--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node ./src/index.js"
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/samioan/Poker-Game#readme",
   "dependencies": {
     "shuffle-array": "^1.0.1"
+  },
+  "devDependencies": {
+    "jest": "^26.5.2"
   }
 }
