--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "poker app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node ./src/index.js"
   },
   "repository": {
@@ -24,6 +24,6 @@
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
-    "jest": "^26.5.2"
+    "jest": "^26.6.1"
   }
 }
